# hyperlane-cosmos

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  go.work.sum  local.Dockerfile
.github/workflows/: unit-tests.yml
app/: app.go  app_test.go  encoding.go  export.go  sim_test.go  test_helpers.go  upgrades.go
cmd/simd/: main.go  root.go
contracts/interface-test/: Cargo.toml
contracts/interface-test/.cargo/: config
contracts/interface-test/src/: contract.rs  execute.rs  hyperlane_bindings.rs  lib.rs  msg.rs  queries.rs  state.rs
docs/proto/: proto-docs.md
imt/: .gitignore  doc.go  go.mod  go.sum  incremental_merkle.json  tree.go  tree_test.go
imt/testdata/: incremental_merkle.json  merkle.json
interchaintest/: go.mod  go.sum  module_mailbox_test.go  setup.go
interchaintest/contracts/: hyperlane.wasm
interchaintest/counterchain/: counter_chain.go  legacy_multisig.go  merkle_root_multisig.go  message_id_multisig.go  validators.go
interchaintest/docker/: docker.go
interchaintest/helpers/: announce.go  common.go  common_test.go  cosmwasm.go  counter_chain.go  igp.go  ism.go  mailbox.go  types.go  validators.go
interchaintest/tests/: announcement_test.go  ava_helpers.go  avalanche-cosmos-rly.txt  avalanche-notes.txt  avalanche_helpers.go  cosmos_agent_args.txt  cosmos_avalanche_e2e.go  cosmos_avalanche_e2e_test.go  cosmos_e2e.go  cosmos_e2e_test.go  devlog.txt  helpers.go  hyperlane-cosmos-avalanche.yaml  hyperlane-relayer-args.txt  hyperlane-rly.txt  hyperlane-validator.txt  (+7 more)
proto/: buf.md  buf.yaml
scripts/: mockgen.sh  protocgen.sh
(+166 files in other folders)
