[package]
name = "interface-test"
version = "0.1.0"
edition = "2021"
authors = ["Steve Miskovetz <steve@strange.love>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.2"
cosmwasm-std = "1.1.2"
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.13.2"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.31"}
schemars = "0.8.8"
prefix-hex = "0.7.0"

[build-dependencies]
cosmwasm-schema = "1.0.0"
